crates/code-graph-tools/tests/snapshots/snapshot_tools_list__tools_list_search_symbols.snap
---
source: crates/code-graph-tools/tests/snapshot_tools_list.rs
expression: "tool_entry(\"search_symbols\")"
---
{
  "name": "search_symbols",
  "description": "Search for symbols by name pattern across the indexed codebase. Returns the `Page<SymbolResult>` envelope {results, total, offset, limit, truncated, next_offset} (flattened on the wire), sorted by symbol_id ascending, PLUS an optional `suggestions: string[]` field — see the suggestions block below. At least one filter is expected: `query` (substring or regex on the symbol name; methods additionally match the qualified `Parent::name` form, so both `^is_empty$` and `^Adapter::is_empty$` find the method), `kind` (function, method, class, struct, enum, typedef, interface, trait), `namespace` (substring match against the symbol's namespace path, e.g. 'Nfs' matches 'Ark::Nfs::V4'), and/or `language` (cpp, rust, go, python, csharp, java). `subtree` optionally restricts those matches to files at or below a directory prefix (absent or empty searches the whole graph); it composes with, but does not replace, the required query/kind/namespace/language filter. `limit` defaults to 20 (max 1000, clamped silently — the echoed `limit` reflects the resolved value); raise `limit` for broad searches expected to return many hits, and use `offset` to advance through the remainder. `offset` defaults to 0; raise `offset` to skip past previous results, or set `offset = next_offset` to resume after a truncated page. `brief` (default true) omits signature, column, and end_line; set false for full detail. `near` defaults to false; set it true for Levenshtein fuzzy matching of a required non-empty plain-identifier `query` instead of regex/substring matching. Fuzzy results sort closest-first and cannot be combined with `count_only=true`. In near mode, `max_distance` defaults by query length (0 edits at length 1, 1 at 2-11, 2 at 12-17, 3 at 18+) and is clamped to 8; it is ignored when `near=false`. `count_only` defaults to false; `count_only=true` returns the match total with an empty `results` array in a < 1KB bounded response — use it to size a search before committing to paging. **`suggestions: string[]` (did-you-mean field):** included in the response ONLY when (a) `query` is anchored as `^…$` with length ≥ 2 (and the inner pattern is non-empty), AND (b) `total == 0` (no matches under the anchored query). Holds up to 5 candidate symbol-id strings. When the inner pattern is a plain identifier (no regex metacharacters), candidates are sorted by ascending Levenshtein distance to the inner pattern (length-adaptive threshold: 1 edit at length 2-11, 2 at 12-17, 3 at 18+), then by common-prefix length DESC (so obvious-intent names like `Actor` surface for a `^Actr$` typo instead of getting buried under alphabetically- earlier same-length candidates), then by `is_shorter_than_query` asc (insert-typo bias — when a delete-typo and an insert-typo tie on every other key, the insert-typo wins because users under-type more often than over-type), then by length-closeness, then name. Falls back to a broad substring match when no symbols are within the edit-distance threshold. When the inner pattern contains regex metacharacters, candidates come from the broad substring match alone. **Absent from the wire entirely when empty** (no `\"suggestions\": []` key — serialization skips empty lists), so a present `suggestions` field is itself a signal that the anchored query missed. **Never emitted on `count_only=true`** (the count_only path short-circuits before the suggestion block), so clients counting matches must use plain `query` (no anchors) or call again without `count_only` to receive suggestions. Responses are also capped by `[response].max_bytes` (default 100KB); when either `limit` or the byte budget leaves records un-emitted, `truncated` is true and `next_offset` points at the first un-emitted record — re-call with `offset = next_offset` to resume. If a byte-starved page is empty and `next_offset` equals the requested `offset`, that is a start-fresh marker, not a continuation: do not retry unchanged; raise `[response].max_bytes`, re-run `analyze_codebase`, then retry. `truncated=false` plus `next_offset=null` means the page is complete. `results.length` may be less than `limit` when the byte cap fires, so consult `truncated`, not length, to detect partial pages.",
  "inputSchema": {
    "$schema": "https://json-schema.org/draft/2020-12/schema",
    "properties": {
      "brief": {
        "default": null,
        "description": "Omit signature, column, end_line (default true)",
        "type": [
          "boolean",
          "null"
        ]
      },
      "count_only": {
        "default": null,
        "description": "Return only the match count, no records (default false). Bounded response < 1KB regardless of match scale.",
        "type": [
          "boolean",
          "null"
        ]
      },
      "kind": {
        "default": null,
        "description": "Filter by symbol kind: function, method, class, struct, enum, typedef, interface, trait",
        "type": [
          "string",
          "null"
        ]
      },
      "language": {
        "default": null,
        "description": "Filter by source language: cpp, rust, go, python, csharp, or java",
        "type": [
          "string",
          "null"
        ]
      },
      "limit": {
        "default": null,
        "description": "Maximum results to return (default 20)",
        "format": "uint32",
        "minimum": 0,
        "type": [
          "integer",
          "null"
        ]
      },
      "max_distance": {
        "default": null,
        "description": "Max edit distance for near=true mode (default: length-adaptive — 0 edits at length 1, 1 at 2-11, 2 at 12-17, 3 at 18+). Clamped to 8. Ignored when near=false.",
        "format": "uint32",
        "minimum": 0,
        "type": [
          "integer",
          "null"
        ]
      },
      "namespace": {
        "default": null,
        "description": "Filter by namespace (substring match, e.g., 'Nfs' matches 'Ark::Nfs::V4')",
        "type": [
          "string",
          "null"
        ]
      },
      "near": {
        "default": null,
        "description": "Edit-distance (fuzzy) search mode (default false). When true, `query` is matched by Levenshtein distance against symbol names rather than regex/substring. `query` must be a non-empty plain identifier (no regex metacharacters). `max_distance` controls the threshold (or length-adaptive default). Results sorted by closest match first. Incompatible with count_only.",
        "type": [
          "boolean",
          "null"
        ]
      },
      "offset": {
        "default": null,
        "description": "Skip first N matches for pagination (default 0)",
        "format": "uint32",
        "minimum": 0,
        "type": [
          "integer",
          "null"
        ]
      },
      "query": {
        "default": null,
        "description": "Substring or regex pattern to match symbol names",
        "type": [
          "string",
          "null"
        ]
      },
      "subtree": {
        "default": null,
        "description": "Restrict matches to symbols whose file path is at or under this directory prefix. Uses the path-trie's subtree iterator so the file-set build cost is proportional to the subtree, NOT the whole graph. Absent / empty value matches across the whole graph.",
        "type": [
          "string",
          "null"
        ]
      }
    },
    "title": "SearchSymbolsArgs",
    "type": "object"
  }
}
